@@ -1,0 +1,7 @@
+TOPDIR = ../..
+
+include $(TOPDIR)/Preamble.make
+
+DIST_FILES = oracleasm.init.functions
+
+include $(TOPDIR)/Postamble.make
