@@ -1,0 +1,8 @@
+TOPDIR = ../..
+
+include $(TOPDIR)/Preamble.make
+
+DIST_FILES =				\
+	oracleasm.init
+
+include $(TOPDIR)/Postamble.make
